--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,10 @@ jobs:
       run: yarn install
 
     - name: Run build
-      run: yarn build  # assumes you have a 'build' script in your package.json
+      run: yarn build
+
+    - name: Run package
+      run: yarn package
 
     - name: Commit and Push dist folder
       run: |
